# FamilyVault

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SPECIFICATIONS.md  TECH_DEBT.md  run_win_cursor.bat  vcpkg.json
.github/workflows/: build.yml
agents/: README.md  autodev.sh
agents/prompts/: code_reviewer.md  coder.md  plan_reviewer.md  planner.md
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/familyvault/familyvault/: MainActivity.kt  NetworkService.kt
app/lib/: app.dart  main.dart
app/lib/core/ffi/: native_bridge.dart
app/lib/core/models/: cloud_account.dart  content_indexer_status.dart  device_info.dart  duplicate_group.dart  file_record.dart  file_transfer.dart  index_stats.dart  models.dart  pairing_info.dart  remote_file_record.dart  search_query.dart  search_result.dart  tag.dart  types.dart  watched_folder.dart
app/lib/core/providers/: network_providers.dart  providers.dart
app/lib/core/services/: android_network_service.dart  content_indexer_service.dart  database_service.dart  duplicate_service.dart  google_auth_service.dart  index_service.dart  network_service.dart  search_service.dart  services.dart  tag_service.dart
app/lib/features/duplicates/: duplicates_screen.dart
app/lib/features/files/: file_view_screen.dart
app/lib/features/folders/: folders_screen.dart
app/lib/features/network/: devices_screen.dart  family_setup_screen.dart  remote_file_viewer.dart  remote_files_screen.dart
app/lib/features/search/: search_home_screen.dart  search_screen.dart
app/lib/features/settings/: settings_screen.dart
app/lib/features/tags/: tags_screen.dart
app/lib/shared/utils/: file_icons.dart  formatters.dart  utils.dart
app/lib/shared/widgets/: adaptive_scaffold.dart  android_network_setup.dart  app_error_widget.dart  empty_state.dart  file_card.dart  file_details_panel.dart  file_grid.dart  file_list.dart  file_thumbnail.dart  index_status_bar.dart  loading_indicator.dart  stats_card.dart  sync_status_widget.dart  widgets.dart
app/lib/theme/: app_theme.dart
app/test/models/: file_record_test.dart  search_query_test.dart
app/test/providers/: providers_test.dart
app/test/services/: google_auth_service_test.dart
app/test/utils/: formatters_test.dart
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
core/: CMakeLists.txt
core/include/familyvault/: CloudAccountManager.h  ContentIndexer.h  Database.h  DuplicateFinder.h  FamilyPairing.h  FileScanner.h  IndexManager.h  MimeTypeDetector.h  Models.h  SearchEngine.h  SecureStorage.h  TagManager.h  TextExtractor.h  Types.h  core.h  export.h  familyvault_c.h
core/include/familyvault/Network/: Discovery.h  IndexSyncManager.h  NetworkManager.h  NetworkProtocol.h  PairingServer.h  PeerConnection.h  RemoteFileAccess.h  TlsPsk.h
core/src/Cloud/: CloudAccountManager.cpp
core/src/Database/: Database.cpp  Migrations.cpp
core/src/Duplicates/: DuplicateFinder.cpp
core/src/Index/: ContentIndexer.cpp  FileScanner.cpp  IndexManager.cpp
core/src/Network/: Discovery.cpp  IndexSyncManager.cpp  NetworkManager.cpp  NetworkProtocol.cpp  PairingServer.cpp  PeerConnection.cpp  RemoteFileAccess.cpp  TlsPsk.cpp
core/src/Search/: SearchEngine.cpp
core/src/Security/: FamilyPairing.cpp  SecureStorage.cpp
core/src/Tags/: TagManager.cpp
core/src/TextExtractor/: OfficeTextExtractor.cpp  PdfTextExtractor.cpp  PlainTextExtractor.cpp  TextExtractorRegistry.cpp
core/src/Utils/: MimeTypeDetector.cpp  Types.cpp
core/src/ffi/: familyvault_c.cpp  ffi_cloud.cpp  ffi_internal.h  ffi_network.cpp  ffi_network_manager.cpp  ffi_secure.cpp
tasks/: 1. GDRIVE.md  STAGE_3_TEXT.md  STAGE_4_GDRIVE.md  STAGE_5_P2P.md
tests/core/: CMakeLists.txt  test_cloud_account.cpp  test_cloud_files.cpp  test_content_indexer.cpp  test_database.cpp  test_ffi_initialization.cpp  test_file_scanner.cpp  test_file_transfer.cpp  test_index_manager.cpp  test_index_sync.cpp  test_json_contracts.cpp  test_loopback_integration.cpp  test_main.cpp  test_mime_type.cpp  test_network.cpp  test_network_manager.cpp  test_p2p_integration.cpp  test_pairing_protocol.cpp  test_remote_file_access.cpp  test_search_engine.cpp  test_security.cpp  test_state_machine.cpp  test_tags.cpp  test_text_extractor.cpp  test_tls_psk.cpp  test_version.cpp
tests/core/fixtures/text_extraction/: corrupted.docx  data.ods  data.xlsx  document.docx  document.odt  empty.docx  generate_fixtures.py  presentation.pptx  sample.csv  sample.html  sample.json  sample.md  sample.xml  simple.txt  utf8.txt
tool/: build_core.dart  clean.dart  generate_ffi.dart  pubspec.yaml  run.dart
